%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'biostatUZH'}

\section{Changes in biostatUZH version 1.5.0 (2015-02-10)}{
  \itemize{
    \item Bugfix in \code{confIntAUC()}: the argument \code{conf.level}
    was ignored when calculating Wilson confidence intervals for
    specificity, sensitivity, PPV, and NPV.
    \item Migrated package development to the R-Forge project \dQuote{ebuzh}.
    \item Accommodated R CMD check issues.
    \item Updated institute name.
    \item Standardized \file{NEWS} file format.
    \item The \pkg{boot} package is no longer attached (but only imported).
  }
}

\section{Changes in biostatUZH version 1.4.9 (2014-04-15)}{
  \itemize{
    \item Bugfix in \code{confIntIndependentProportion()}: the Newcombe interval
    was wrong due to wrong internal use of the \code{conf.level} argument
    (spotted by Andrea Kraus). The bug was probably introduced in
    version 1.1.0, when all \code{alpha} arguments were changed to
    \code{conf.level}.
  }
}

\section{Changes in biostatUZH version 1.4.8 (2013-11-21)}{
  \itemize{
    \item improved code and doc of \code{formatPval()} and \code{logit()}
    \item fixed \file{NAMESPACE} issues
    \item moved most packages from Depends and Imports to Suggests
    \item consistently use upper-case \file{.R} as the source file extension
  }
}

\section{Changes in biostatUZH version 1.4.7 (2013-04-08)}{
  \itemize{
    \item \code{tableRegression()}: bugfix (related to \code{intercept} argument)
  }
}

\section{Changes in biostatUZH version 1.4.6 (2013-04-05)}{
  \itemize{
    \item \code{tableRegression()}: removed default
    \code{"coefficients"} from all non-lm objects 
  }
}

\section{Changes in biostatUZH version 1.4.5 (2013-04-04)}{
  \itemize{
    \item \code{tableRegression()}: completely updated
  }
}

\section{Changes in biostatUZH version 1.4.4 (2013-03-07)}{
  \itemize{
    \item \code{tableRegression()}: option \code{"text"} added (before